--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ function execute() {
 }
 
 gapi.load("client:auth2", function() {
-  gapi.auth2.init({client_id: "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"});
+  gapi.auth2.init({client_id: "273069555341-qk84rd2rbltuj67endt341g9h7o8kn23.apps.googleusercontent.com"});
 });
 
     </script>
